--- a/index.css
+++ b/index.css
@@ -96,11 +96,16 @@ mark{
   
 @media (max-width: 640px) {
     .links {
-      width: 100%;
-      justify-content: center;
+        width: 100%;
+        justify-content: center;
     }
     #navbarContainer {
-      flex-direction: column;
-      align-items: center;
+        flex-direction: column;
     }
+    img{
+        height: 200px;
+        width: 150px;
+        border: 12px solid beige;
+    }
+
 }
