--- a/contact/contacts.css
+++ b/contact/contacts.css
@@ -67,3 +67,17 @@ img{
     font-weight: bold;
 }
 
+@media (max-width: 640px) {
+    .links {
+        width: 100%;
+        justify-content: center;
+    }
+    #navbarContainer {
+        flex-direction: column;
+    }
+    img{
+        height: 150px;
+        width: auto;
+    }
+
+}
