--- a/index.css
+++ b/index.css
@@ -102,10 +102,41 @@ mark{
     #navbarContainer {
         flex-direction: column;
     }
+    #flex-container{
+        flex-direction: column;
+        justify-content: center;
+    }
     img{
-        height: 200px;
-        width: 150px;
+        height: 300px;
+        width: auto;
         border: 12px solid beige;
+    }
+    .flexItem{
+        text-align: center;
+    }
+    #infoTitle{
+        text-align: center;
+        font-size: 20px;
+    }
+    #name{
+        text-align: center;
+        font-size: 18px;
+    }
+    #briefInfo{
+        text-align: center;
+        font-size: 15px;
+    }
+    .Info{
+        font-size: 13px;
+        padding-left: 20px;
+        padding-right: 20px;
+        text-align: left;
+        padding-bottom: 20px;
+    }
+    #jobTitle{
+        text-align: left;   
+        padding-left: 20px;
+        font-size: 16px  !important;
     }
 
 }
